Fixed z-index bug with navbar and slider

--- a/src/components/navbar/Navbar.scss
+++ b/src/components/navbar/Navbar.scss
@@ -7,6 +7,7 @@
   transition: all 0.5s ease;
   position: sticky;
   top: 0;
+  z-index: 2;
 
   
   &.active {
